# swagger/ocp-course-api.swagger.json
@@ -188,6 +188,20 @@
         }
       }
     },
+    "apiMultiCreateCourseV1Response": {
+      "type": "object",
+      "properties": {
+        "not_saved": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiCourse"
+          }
+        },
+        "error": {
+          "type": "string"
+        }
+      }
+    },
     "apiRemoveCourseV1Response": {
       "type": "object",
       "properties": {
